crates/cofferdam-formatters/tests/snapshots/snapshots__compact_render_empty.snap
---
source: crates/cofferdam-formatters/tests/snapshots.rs
expression: "CompactFormatter::render(&[])"
---
priority|severity|category|id|file|line|column|message
