crates/cofferdam-formatters/tests/snapshots/snapshots__json_render_empty.snap
---
source: crates/cofferdam-formatters/tests/snapshots.rs
expression: "JsonFormatter::render(&[])"
---
{"findings":[],"summary":{"total":0,"by_category":{}}}
