crates/cofferdam-formatters/tests/snapshots/snapshots__json_render_truncated.snap
---
source: crates/cofferdam-formatters/tests/snapshots.rs
expression: "JsonFormatter::render_with_opts(&issues, cofferdam_formatters::JsonRenderOpts\n{ pretty: true, truncated_from: Some(42), })"
---
{
  "findings": [
    {
      "id": "Consistency.QuoteStyle",
      "category": "consistency",
      "docs_url": "https://tajd.github.io/cofferdam/checks/Consistency.QuoteStyle",
      "priority": -5,
      "severity": "low",
      "file": "src/app.ts",
      "line": 12,
      "column": 5,
      "start_byte": 200,
      "end_byte": 215,
      "message": "use single quotes to match the dominant style in this project"
    },
    {
      "id": "Design.DuplicateExportName",
      "category": "design",
      "docs_url": "https://tajd.github.io/cofferdam/checks/Design.DuplicateExportName",
      "priority": 5,
      "severity": "medium",
      "file": "src/components/index.ts",
      "line": 3,
      "column": 1,
      "start_byte": 40,
      "end_byte": 56,
      "message": "export `Button` appears in multiple barrel files",
      "related": [
        {
          "file": "src/ui/index.ts",
          "line": 7,
          "column": 1,
          "start_byte": 120,
          "end_byte": 136
        },
        {
          "file": "src/shared/index.ts",
          "line": 2,
          "column": 1,
          "start_byte": 18,
          "end_byte": 34
        }
      ]
    },
    {
      "id": "Readability.MaxLineLength",
      "category": "readability",
      "docs_url": "https://tajd.github.io/cofferdam/checks/Readability.MaxLineLength",
      "priority": -3,
      "severity": "info",
      "file": "src/utils/format.ts",
      "line": 88,
      "column": 121,
      "start_byte": 3200,
      "end_byte": 3344,
      "message": "line is 145 columns, exceeds limit of 120"
    },
    {
      "id": "Refactor.CyclomaticComplexity",
      "category": "refactor",
      "docs_url": "https://tajd.github.io/cofferdam/checks/Refactor.CyclomaticComplexity",
      "priority": 15,
      "severity": "high",
      "file": "src/orders/processor.ts",
      "line": 22,
      "column": 1,
      "start_byte": 580,
      "end_byte": 620,
      "message": "function `processOrder` has cyclomatic complexity 14, exceeds limit of 10"
    },
    {
      "id": "Warning.TripleEquals",
      "category": "warning",
      "docs_url": "https://tajd.github.io/cofferdam/checks/Warning.TripleEquals",
      "priority": 15,
      "severity": "critical",
      "file": "src/auth/validate.ts",
      "line": 47,
      "column": 18,
      "start_byte": 1402,
      "end_byte": 1404,
      "message": "use `===` instead of `==` to avoid type coercion"
    }
  ],
  "summary": {
    "total": 5,
    "by_category": {
      "consistency": 1,
      "design": 1,
      "readability": 1,
      "refactor": 1,
      "warning": 1
    },
    "truncated_from": 42
  }
}
