crates/cofferdam-formatters/tests/snapshots/snapshots__text_render_empty.snap
---
source: crates/cofferdam-formatters/tests/snapshots.rs
expression: "TextFormatter::render(&[])"
---
✓ no findings
